fixed CSS; tic tac toe box was overlapping 'next player heading'

--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,23 @@
-body { 
+body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
-}
-
-ol, ul {
+  }
+  
+  ol, ul {
     padding-left: 30px;
-}
-
-.board-row:after {
+  }
+  
+  .board-row:after {
     clear: both;
     content: "";
     display: table;
-}
-
-.status {
+  }
+  
+  .status {
+    margin-bottom: 10px;
+  }
+  
+  .square {
     background: #fff;
     border: 1px solid #999;
     float: left;
@@ -26,21 +30,22 @@ ol, ul {
     padding: 0;
     text-align: center;
     width: 34px;
-}
-
-.square:focus {
+  }
+  
+  .square:focus {
     outline: none;
-}
-
-.kbd-navigation .square:focus {
+  }
+  
+  .kbd-navigation .square:focus {
     background: #ddd;
-}
-
-.game {
+  }
+  
+  .game {
     display: flex;
     flex-direction: row;
-}
-
-.game-info {
+  }
+  
+  .game-info {
     margin-left: 20px;
-}
+  }
+  
